...
            .background(MaterialTheme.colorScheme.background)
    ) {
        LazyColumn(
            state = listState,
            modifier = Modifier
                .fillMaxSize()
                .testTag("detail_scaffold_list"),
            contentPadding = PaddingValues(bottom = contentBottomPadding)
        ) {
            item {
                Box(
                    modifier = Modifier
                        .fillMaxWidth()
...
